# DictCPP

./: .gitignore  .readthedocs.yml  CMakeLists.txt  README.md  dictcpp.hpp
.github/workflows/: ci.yml  cmake_macos.yml  cmake_ubuntu.yml  cmake_windows.yml  coverage.yml
docs/: conf.py  index.rst  licensing.rst  requirements.txt
tests/: CMakeLists.txt  catch.hpp  test_delete.cpp  test_dict.cpp  test_direct.cpp  test_functions.cpp  test_get.cpp  test_merge.cpp
